[package]
name = "pwrabs"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
build = "build.rs"

[dependencies]
unicode-segmentation = "1.1.0"
fst = { version = "0.1", default_features = false }
serde_derive = "*"
serde_json = "*"
serde = "*"
futures = "*"
wheel = { git="https://github.com/s3bk/wheel.git" }

[build-dependencies]
unicode-segmentation = "1.1.0"
fst = { version = "0.1", default_features = false }

[profile.release]
opt-level = "z"
#panic = "abort"
